infrastructure/kustomize/kafka/overlays/prod/kafka-ui-config-mount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
spec:
  template:
    spec:
      volumes:
        - name: kafka-ui-config
          configMap:
            name: kafka-ui-config
      containers:
        - name: kafka-ui
          volumeMounts:
            - name: kafka-ui-config
              mountPath: /config
