infrastructure/kustomize/kafka/overlays/prod/kafka-ui-remove-spring-security-merge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
spec:
  template:
    spec:
      containers:
      - name: kafka-ui
