infrastructure/kustomize/kafka/overlays/prod/kafka-ui-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kafka-ui-vs
  namespace: kafka
spec:
  hosts:
  - enterprise-kafka.acme.com
  gateways:
  - istio-system/enterprise-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kafka-ui
        port:
          number: 80
